[package]
name = "routinator-ui"
version = "0.2.3"
edition = "2018"
authors = ["The NLnet Labs RPKI Team <rpki@nlnetlabs.nl>"]
description = "Web UI for Routinator, a RPKI relying party software."
repository = "https://github.com/NLnetLabs/routinator"
keywords = ["rpki", "routing-security", "bgp"]
categories = ["web-ui"]
license = "BSD-3-Clause"
readme = "README.md"

[package.metadata]
download-url = "https://github.com/NLnetLabs/routinator-ui/releases/download"
build-file-name = "routinator-ui-build.tar.gz"

[dependencies]

[build-dependencies]
reqwest = { version="0.11.0", features=["blocking"] }
tar = "0.4.35"
flate2 = "1.0.20"
