[package]
name = "routinator-ui"
version = "0.3.0"
edition = "2018"
authors = ["The NLnet Labs RPKI Team <rpki@nlnetlabs.nl>"]
description = "Web UI for Routinator, a RPKI relying party software."
repository = "https://github.com/NLnetLabs/routinator-ui"
keywords = ["rpki", "routing-security", "bgp"]
categories = ["web-ui"]
license = "BSD-3-Clause"
readme = "README.md"
build = "build.rs"

[dependencies]

[build-dependencies]
reqwest = { version="0.11.0", default-features = false, features=["blocking", "rustls-tls"] }
tar = "0.4.35"
flate2 = "1.0.20"
